--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/icon.webp" />
+    <link rel="preload" href="/logo.webp" as="image" type="image/webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visprex</title>
   </head>
