--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Visualise your CSV files in seconds without sending your data anywhere"/>
     <link rel="icon" type="image/svg+xml" href="/icon.webp" />
     <link rel="preload" href="/logo.webp" as="image" type="image/webp">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visprex</title>
   </head>
   <body>
