--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Visualise your CSV files in seconds without sending your data anywhere"/>
-    <link rel="icon" type="image/svg+xml" href="/icon.webp" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/png" href="/192.png" />
     <link rel="preload" href="/logo.webp" as="image" type="image/webp">
     <title>Visprex</title>
   </head>
